--- a/App/frontend/src/App.css
+++ b/App/frontend/src/App.css
@@ -1,3 +1,13 @@
+@import 'datatables.net-bs5';
+@import 'datatables.net-buttons-bs5';
+@import 'datatables.net-colreorder-bs5';
+@import 'datatables.net-fixedheader-bs5';
+@import 'datatables.net-responsive-bs5';
+@import 'datatables.net-rowgroup-bs5';
+@import 'datatables.net-searchbuilder-bs5';
+@import 'datatables.net-searchpanes-bs5';
+
+
 .lol {
     color: red;
     background-color: black;
